@@ -50,7 +50,22 @@ class QueryTest(PersistTest):
         for row in r:
             l.append(row)
         self.assert_(len(l) == 3)
-        
+    
+    def test_global_metadata(self):
+        t1 = Table('table1', Column('col1', Integer, primary_key=True),
+            Column('col2', String(20)))
+        t2 = Table('table2', Column('col1', Integer, primary_key=True),
+            Column('col2', String(20)))
+   
+        assert t1.c.col1
+        global_connect(testbase.db)
+        default_metadata.create_all()
+        try:
+            assert t1.count().scalar() == 0
+        finally:
+            default_metadata.drop_all()
+            default_metadata.clear()
+ 
     def testpassiveoverride(self):
         """primarily for postgres, tests that when we get a primary key column back 
         from reflecting a table which has a default value on it, we pre-execute
